# chip8emu

./: CMakeLists.txt  LICENSE  example-config.yml  readme.md
.github/workflows/: build.yml  style.yml
src/: chip8_emulator.h  config.cpp  config.h  display.cpp  display.h  emulator.cpp  emulator.h  input.cpp  input.h  main.cpp  sdl_chip8_emulator.cpp  sdl_chip8_emulator.h  sdl_display.cpp  sdl_display.h  sdl_input.cpp  sdl_input.h  sdl_speaker.cpp  sdl_speaker.h  speaker.cpp  speaker.h
